--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,16 +13,49 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    repositories {
+        flatDir{
+            dir'libs'
+        }
+    }
+    signingConfigs {
+        release {
+            storeFile file('H:\\project\\waibao2\\签名文件\\zgt.jks')
+            storePassword 'zgt123456'
+            keyAlias 'key'
+            keyPassword '123456'
+        }
+        debug {
+            storeFile file('debug.keystore')
+            storePassword "android"
+            keyAlias "androiddebugkey"
+            keyPassword "android"
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            android.applicationVariants.all { variant ->
+                variant.outputs.all {
+                    outputFileName = "货主端_v${variant.versionName}_vc${variant.versionCode}_${releaseTime()}.apk"
+                }
+            }
+        }
+        debug {
+            minifyEnabled false
+            signingConfig signingConfigs.release
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField "boolean", "LOG_DEBUG", "true"
+            debuggable true
         }
     }
 
 }
-
+def static releaseTime() {
+    return new Date().format("yyyy-MM-dd", TimeZone.getTimeZone("UTC"))
+}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -31,6 +64,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.amap.api:location:4.8.0'
-    implementation 'com.amap.api:3dmap:7.1.0'
+    implementation 'com.lzy.net:okgo:3.0.4'
+    implementation 'com.alibaba:fastjson:1.2.61'
+    implementation 'org.bouncycastle:bcprov-jdk15on:1.47'
+    implementation (name:'locationsdk-1.0.0', ext:'aar')
 }
